--- a/indexx.html
+++ b/indexx.html
@@ -38,13 +38,13 @@
             <br>
             <input type="email" name="" placeholder="Enter email" required>
             <br>
-        
+            <button id="start-button" class="btn-primary"><a href="dashboard.html">DASHBOARD</a></button>
 
 
           <p id="demo4"><strong>How to play:</strong></p>
           <ul id="rules">
             <li>Answer each question given</li>
-            <li>for each correct answer you'll win 10 points</li>
+            <li>for each correct answer you'll win 1 point</li>
           </ul>
 
           <button id="start-button" class="btn-block">Start Game</button>
