--- a/start.html
+++ b/start.html
@@ -53,7 +53,7 @@
     <button class="btn btn-primary" type="button" checked>HEAD BACK</button>
     <button class="btn btn-primary" type="button">CROSS IT</button>
   </div>
-  <h3>Q4: You crossed the bridge and met a crazy stranger. Do you want to talk to him?</h3>
+  <h3>Q4: You headed back from the bridge and met a crazy stranger. Do you want to talk to him?</h3>
   <div class="d-grid gap-2 d-md-block">
     <button class="btn btn-primary" type="button" checked>YES</button>
     <button class="btn btn-primary" type="button">NO</button>
